--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -8,7 +8,7 @@ interface Props {
 
 const {
 	title = 'Amlan Sarmah: Personal Site',
-	description = 'The personal site of Jeanine White',
+	description = 'The personal site of Amlan Sarmah',
 } = Astro.props;
 ---
 
