--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -4,19 +4,19 @@ import Icon from './Icon.astro';
 
 <section class="box skills">
 	<div class="stack gap-2 lg:gap-4">
-		<Icon icon="terminal-window" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Full Stack</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+		<Icon icon="globe" color="var(--accent-regular)" size="2.5rem" gradient />
+		<h2>Wordpress and Web Development</h2>
+		<p>Delivering tailored digital solutions, ensuring seamless user experiences and optimal performance for online success.</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
-		<Icon icon="trophy" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Industry Leader</h2>
-		<p>Neque viverra justo nec ultrices dui. Est ultricies integer quis auctor elit.</p>
+		<Icon icon="google" color="var(--accent-regular)" size="2.5rem" gradient />
+		<h2>Search Engine Optimisation</h2>
+		<p>Enhancing online visibility and driving organic traffic through effective SEO techniques.</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="strategy" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Strategy-Minded</h2>
-		<p>Urna porttitor rhoncus dolor purus non enim praesent ornare.</p>
+		<h2>Innovation and Strategy</h2>
+		<p>Fostering innovation and strategic approaches for transformative outcomes in the digital landscape.</p>
 	</div>
 </section>
 
