--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,19 +5,19 @@ import ContactCTA from '../components/ContactCTA.astro';
 import Hero from '../components/Hero.astro';
 ---
 
-<BaseLayout title="About | Jeanine White" description="About Jeanine White Lorem Ipsum">
+<BaseLayout title="About | Amlan Sarmah" description="About Amlan Sarmah">
 	<div class="stack gap-20">
 		<main class="wrapper about">
 			<Hero
 				title="About"
 				tagline="Thanks for stopping by. Read below to learn more about myself and my background."
 			>
-				<img
+				<!-- <img
 					width="1553"
 					height="873"
 					src="/assets/at-work.jpg"
-					alt="Jeanine White at work with a colleague"
-				/>
+					alt=""
+				/> -->
 			</Hero>
 
 			<section>
@@ -46,13 +46,14 @@ import Hero from '../components/Hero.astro';
 			<section>
 				<h2 class="section-title">Education</h2>
 				<div class="content">
-					<p>Corporis voluptates tenetur laudantium.</p>
+					<p>B.Tech CSE (Coputer Science Engineering) - Sikkim Manipal Institute of Technology</p>
 				</div>
 			</section>
 			<section>
 				<h2 class="section-title">Skills</h2>
 				<div class="content">
-					<p>officia unde omnis</p>
+					<p>Wordpress and Web Development</p>
+					<p>Search Engine Optimisation</p>
 				</div>
 			</section>
 		</main>
