--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,33 +30,32 @@ const projects = (await getCollection('work'))
 		<div class="wrapper stack gap-8 lg:gap-20">
 			<header class="hero">
 				<Hero
-					title="Hello, my name is Jeanine White"
-					tagline="I am a Creative Developer who is currently based in Portland, Oregon."
+					title="Hello, my name is Amlan Sarmah"
+					tagline="I am a Creative Developer who is currently based in Siliguri, West Bengal."
 					align="start"
 				>
 					<div class="roles">
 						<Pill><Icon icon="code" size="1.33em" /> Developer</Pill>
-						<Pill><Icon icon="microphone-stage" size="1.33em" /> Speaker</Pill>
-						<Pill><Icon icon="pencil-line" size="1.33em" /> Writer</Pill>
+						<Pill><Icon icon="search" size="1.33em" /> SEO Expert</Pill>
 					</div>
 				</Hero>
 
-				<img
-					alt="Jeanine White smiling in a red plaid shirt and tortoise shell glasses"
+				<!-- <img
+					alt=""
 					width="480"
 					height="620"
 					src="/assets/portrait.jpg"
-				/>
+				/> -->
 			</header>
 
 			<Skills />
 		</div>
 
-		<main class="wrapper stack gap-20 lg:gap-48">
+		<!-- <main class="wrapper stack gap-20 lg:gap-48">
 			<section class="section with-background with-cta">
 				<header class="section-header stack gap-2 lg:gap-4">
 					<h3>Selected Work</h3>
-					<p>Take a look below at some of my featured work for clients from the past few years.</p>
+					<p>Take a look below at some of the featured work for my clients. </p>
 				</header>
 
 				<div class="gallery">
@@ -77,9 +76,9 @@ const projects = (await getCollection('work'))
 						<Icon icon="arrow-right" size="1.2em" />
 					</CallToAction>
 				</div>
-			</section>
+			</section> -->
 
-			<section class="section with-background bg-variant">
+			<!-- <section class="section with-background bg-variant">
 				<header class="section-header stack gap-2 lg:gap-4">
 					<h3>Mentions</h3>
 					<p>
@@ -99,8 +98,8 @@ const projects = (await getCollection('work'))
 						}
 					</Grid>
 				</div>
-			</section>
-		</main>
+			</section> -->
+		<!-- </main> -->
 
 		<ContactCTA />
 	</div>
