--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -23,24 +23,12 @@ import Hero from '../components/Hero.astro';
 			<section>
 				<h2 class="section-title">Background</h2>
 				<div class="content">
-					<p>
-						Lorem ipsum dolor sit amet, <a href="https://astro.build/">Astro</a> makes people happy.
-						Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Proin nibh nisl condimentum
-						id venenatis a condimentum vitae. Dapibus ultrices in iaculis nunc. Arcu odio ut sem nulla
-						pharetra diam sit amet. Diam quis enim lobortis scelerisque fermentum dui faucibus in ornare.
+					<p>Welcome to my corner of the web! I'm Amlan, a passionate developer dedicated to crafting exceptional digital experiences. With a keen eye for detail and a knack for problem-solving, I specialize in building sleek and responsive websites that not only look great but also perform flawlessly across all devices, while also optimizing them for higher search engine rankings. 
 					</p>
-					<p>
-						Arcu dui vivamus arcu felis bibendum ut tristique et egestas. Eget gravida cum sociis
-						natoque penatibus. Cras fermentum odio eu feugiat pretium nibh. Proin nibh nisl
-						condimentum id venenatis. Porta nibh venenatis cras sed felis eget velit. Id diam vel
-						quam elementum pulvinar etiam non.
-					</p>
-					<p>
-						Ultrices tincidunt arcu non sodales neque sodales ut. Sed enim ut sem viverra aliquet
-						eget sit amet. Lacus luctus accumsan tortor posuere ac ut consequat semper viverra.
-						Viverra accumsan in nisl nisi scelerisque eu ultrices. In massa tempor nec feugiat nisl
-						pretium fusce.
-					</p>
+						<p>Whether it's bringing a client's vision to life or tackling a challenging problem, I thrive on the creativity and technicality of the development process.</p> 
+
+
+					
 				</div>
 			</section>
 			<section>
